made hover-shade-dark apply background but not hover effect on elements without an href, to avoid confusing people on mobile with non-working links
(cherry picked from commit ed4f371fd7f088f6aaa876acc5cc5beaa4d98ee9)

--- a/_sass/mixins/_themes.scss
+++ b/_sass/mixins/_themes.scss
@@ -153,8 +153,10 @@
             background-color: $dark-background;
             transition-property: background-color;
 
-            @include hover {
-                background-color: darken-bg($text-color, $dark-background, $brand-color);
+            &[href] {
+                @include hover {
+                    background-color: darken-bg($text-color, $dark-background, $brand-color);
+                }
             }
         }
     }
